--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,48 @@
     "queue": "c",
     "stack": "c",
     "functional": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "array": "c",
+    "atomic": "c",
+    "*.tcc": "c",
+    "codecvt": "c",
+    "concepts": "c",
+    "cstddef": "c",
+    "cstdio": "c",
+    "cstring": "c",
+    "cwchar": "c",
+    "deque": "c",
+    "vector": "c",
+    "memory": "c",
+    "memory_resource": "c",
+    "optional": "c",
+    "string_view": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "fstream": "c",
+    "initializer_list": "c",
+    "istream": "c",
+    "new": "c",
+    "stdexcept": "c",
+    "string": "c",
+    "system_error": "c",
+    "ratio": "c",
+    "typeinfo": "c",
+    "utility": "c",
+    "variant": "c",
+    "thread": "c",
+    "__debug": "c",
+    "__hash_table": "c",
+    "__split_buffer": "c",
+    "__string": "c",
+    "__tuple": "c",
+    "compare": "c",
+    "cstdlib": "c",
+    "ctime": "c",
+    "filesystem": "c",
+    "ios": "c",
+    "iterator": "c",
+    "mutex": "c",
+    "ostream": "c"
   }
 }
