--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "quickjs"]
-	path = quickjs
-	url = https://github.com/bellard/quickjs.git
+path = quickjs
+url = https://github.com/5102a/quickjs-web.git
